--- a/.env
+++ b/.env
@@ -1,1 +1,17 @@
 Hugging_Face_Token = "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"
+
+
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_aW50ZXJuYWwtYmFybmFjbGUtMy5jbGVyay5hY2NvdW50cy5kZXYk
+CLERK_SECRET_KEY=sk_test_7BIbOLVoWk6NifBB7ITQUBRky9bWXyIYguapG35Ff3
+
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
+NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
+NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
+NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
+
+# This was inserted by `prisma init`:
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
